--- a/fd-polymer-i18next-translate.html
+++ b/fd-polymer-i18next-translate.html
@@ -15,7 +15,7 @@ Element providing solution to no problem in particular.
 
     <script src="../i18next/i18next.js"></script>
     <script >
-            i18n.init({ lng: "it-IT", fallbackLng: 'en', debug: true, resGetPath: '__ns__/__lng__.json'}, function(){
+            i18n.init({ lng: "it-IT", fallbackLng: 'en', debug: true, resGetPath: '../fd-polymer-i18next-translate/__ns__/__lng__.json'}, function(){
 
           if(!localStorage["locale"]){
           var defaultLanguage = navigator.language;
