Removed multiple init

--- a/fd-polymer-i18next-translate.html
+++ b/fd-polymer-i18next-translate.html
@@ -56,12 +56,12 @@ Element providing solution to no problem in particular.
     },
     postInit
   );
-  i18n.init({
+/*  i18n.init({
       // debug: true,
       fallbackLng: false,
       getAsync: false,
       resGetPath: './bower_components/fd-polymer-i18next-translate/__ns__/__lng__.json'
     },
     postInit
-  );
+  ); */
 </script>
